--- a/tcm/modules/web/src/main/webapp/getstarted.xhtml
+++ b/tcm/modules/web/src/main/webapp/getstarted.xhtml
@@ -10,6 +10,8 @@
 <h:head>
 </h:head>
 <f:metadata>
+    <f:viewParam name="advisor" value="#{webutil.uiprofile.advisor}"/>
+    <f:viewParam name="rep" value="#{webutil.uiprofile.rep}"/>
 </f:metadata>
 
 <h:body>
