--- a/tcm/modules/web/src/main/webapp/pages/advisor/adash.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/advisor/adash.xhtml
@@ -40,6 +40,7 @@
                                 </div>
                             </div>
                         </a>
+                        <div style="display:none">
                         <a href="/pages/common/notification.xhtml?Type=T">
                             <div class="Wid30 Responsive BorderedBox Fleft TexAlCenter HoverEffect"
                                  style="margin-left:5%;">
@@ -53,6 +54,7 @@
                                 </div>
                             </div>
                         </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -88,7 +90,7 @@
                                 <div class="EmptyBox10"></div>
                             </div>
                         </a>
-                        <a href="/pages/advisor/alist.xhtml?Action=A"
+                        <a href="/pages/advisor/alist.xhtml?action=A"
                            class="Wid45 BorderedBox Fright TexAlCenter HoverEffect">
                             <div class="ContainerIndent">
                                 <div class="EmptyBox10"></div>
@@ -104,7 +106,7 @@
                         </a>
                     </div>
                     <div class="Container100">
-                        <a href="/pages/advisor/alist.xhtml?Action=P"
+                        <a href="/pages/advisor/alist.xhtml?action=P"
                            class="Wid45 BorderedBox Fleft TexAlCenter HoverEffect">
                             <div class="ContainerIndent">
                                 <div class="EmptyBox10"></div>
