--- a/tcm/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -5,28 +5,28 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/template/common/template.xhtml">
 
-    <f:metadata>
-        <f:event type="preRenderView" listener="#{adashbean.preRenderView}"/>
-    </f:metadata>
+<f:metadata>
+    <f:event type="preRenderView" listener="#{adashbean.preRenderView}"/>
+</f:metadata>
 
-    <ui:define name="content">
-        <div class="layout-portlets-box">
-            <!-- Messages/Alerts -->
-            <div class="Container50 Responsive50">
-                <div class="ContainerIndent PaddingTopBottomNone">
-                    <div class="Container100">
-                        <div class="DispInlBlock MarTop20">
-                            <div class="Container20"><i class="fa fa-user Fs40 red Fleft MarRight10"></i></div>
-                            <div class="Container80">
-                                <div class="Fright">
-                                    <h2 class="black Fs18 FontThemeMedium AdvUserName">#{webutil.lastFirstName}</h2>
-                                </div>
+<ui:define name="content">
+    <div class="layout-portlets-box">
+        <!-- Messages/Alerts -->
+        <div class="Container50 Responsive50">
+            <div class="ContainerIndent PaddingTopBottomNone">
+                <div class="Container100">
+                    <div class="DispInlBlock MarTop20">
+                        <div class="Container20"><i class="fa fa-user Fs40 red Fleft MarRight10"></i></div>
+                        <div class="Container80">
+                            <div class="Fright">
+                                <h2 class="black Fs18 FontThemeMedium AdvUserName">#{webutil.lastFirstName}</h2>
                             </div>
                         </div>
                     </div>
-                        <div class="Seperator Container100"></div>
-                    <div class="Container100">
-                        <a href="/pages/common/notification.xhtml?Type=M">
+                </div>
+                <div class="Seperator Container100"></div>
+                <div class="Container100">
+                    <a href="/pages/common/notification.xhtml?Type=M">
                         <div class="Container50">
                             <div class="Wid90 BorderedBox TexAlCenter HoverEffect MarAuto">
                                 <div class="ContainerIndent">
@@ -35,88 +35,92 @@
                                     <span class="Fs24 DispBlock red FontThemeLight">#{adashbean.getMessage("Message")}</span>
                                 </div>
                             </div>
-                            </div>
-                        </a>
+                        </div>
+                    </a>
+
+                    <div style="display:none">
                         <a href="/pages/common/notification.xhtml?Type=T">
-                        <div class="Container50">
-                            <div class="Wid90 BorderedBox TexAlCenter HoverEffect MarAuto">
-                                <div class="ContainerIndent">
-                                    <i class="fa fa-briefcase gray Fs20"></i>
-                                    <span class="Fs14 DispBlock gray FontThemeLight">Tasks</span>
-                                    <span class="Fs24 DispBlock red FontThemeLight">#{adashbean.getMessage("Task")}</span>
+                            <div class="Container50">
+                                <div class="Wid90 BorderedBox TexAlCenter HoverEffect MarAuto">
+                                    <div class="ContainerIndent">
+                                        <i class="fa fa-briefcase gray Fs20"></i>
+                                        <span class="Fs14 DispBlock gray FontThemeLight">Tasks</span>
+                                        <span class="Fs24 DispBlock red FontThemeLight">#{adashbean.getMessage("Task")}</span>
+                                    </div>
                                 </div>
-                            </div>
                             </div>
                         </a>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Visitors/Stat -->
-            <div class="Container50 Responsive50">
-                <div class="ContainerIndent PaddingTopBottomNone">
-                    <div class="Container100">
-                        <div class="DispInlBlock TexAlLeft MarTop20">
-                            <div class="Container25"><i class="fa fa-line-chart Fs40 orange Fleft MarRight10"></i></div>
-                            <div class="Container75">
-                                <div class="Fright">
-                                    <h2 class="black Fs18 FontThemeMedium AdvVisitorStat">Visitors Stats</h2>
-                                </div>
+        <!-- Visitors/Stat -->
+        <div class="Container50 Responsive50">
+            <div class="ContainerIndent PaddingTopBottomNone">
+                <div class="Container100">
+                    <div class="DispInlBlock TexAlLeft MarTop20">
+                        <div class="Container25"><i class="fa fa-line-chart Fs40 orange Fleft MarRight10"></i></div>
+                        <div class="Container75">
+                            <div class="Fright">
+                                <h2 class="black Fs18 FontThemeMedium AdvVisitorStat">Visitors Stats</h2>
                             </div>
                         </div>
                     </div>
-                    <div class="Seperator Container100"></div>
-                    <div class="Container100">
-                        <a href="/pages/advisor/alist.xhtml?Action=A">
+                </div>
+                <div class="Seperator Container100"></div>
+                <div class="Container100">
+                    <a href="/pages/advisor/alist.xhtml?action=A">
                         <div class="Container50">
-                          <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
-                            <div class="ContainerIndent">
-                                <div class="Fs15 gray FontThemeRegular">Active</div>
-                                <div class="EmptyBox10"></div>
-                                <div class="Fs30 blue FontThemeLight">
-                                    <h:outputText value="#{adashbean.salesInfo.get('Active')}">
-                                        <f:convertNumber pattern="#,###,##0"/>
-                                    </h:outputText>
+                            <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
+                                <div class="ContainerIndent">
+                                    <div class="Fs15 gray FontThemeRegular">Active</div>
+                                    <div class="EmptyBox10"></div>
+                                    <div class="Fs30 blue FontThemeLight">
+                                        <h:outputText value="#{adashbean.salesInfo.get('Active')}">
+                                            <f:convertNumber pattern="#,###,##0"/>
+                                        </h:outputText>
+                                    </div>
                                 </div>
                             </div>
-                          </div>
-                         </div>
-                        </a>
-                        <a href="/pages/advisor/alist.xhtml?Action=A">
+                        </div>
+                    </a>
+                    <a href="/pages/advisor/alist.xhtml?action=A">
                         <div class="Container50">
-                          <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
-                            <div class="ContainerIndent">
-                                <div class="Fs15 gray FontThemeRegular">AUM</div>
-                                <div class="EmptyBox10"></div>
-                                <div class="Fs30 blue FontThemeLight">
-                                    <h:outputText value="#{adashbean.salesInfo.get('AUM')}">
-                                        <f:convertNumber pattern="$#,###,##0"/>
-                                    </h:outputText>
+                            <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
+                                <div class="ContainerIndent">
+                                    <div class="Fs15 gray FontThemeRegular">AUM</div>
+                                    <div class="EmptyBox10"></div>
+                                    <div class="Fs30 blue FontThemeLight">
+                                        <h:outputText value="#{adashbean.salesInfo.get('AUM')}">
+                                            <f:convertNumber pattern="$#,###,##0"/>
+                                        </h:outputText>
+                                    </div>
                                 </div>
                             </div>
-                            </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="EmptyBox10"></div>
-                    <div class="Container100">
-                        <a href="/pages/advisor/alist.xhtml?Action=P">
+                        </div>
+                    </a>
+                </div>
+                <div class="EmptyBox10"></div>
+                <div class="Container100">
+                    <a href="/pages/advisor/alist.xhtml?action=P">
                         <div class="Container50">
-                           <div class="Wid90 BorderedBox TexAlCenter HoverEffect MarAuto">
-                            <div class="ContainerIndent">
-                                <div class="Fs15 gray FontThemeRegular">Visitors</div>
-                                <div class="EmptyBox10"></div>
-                                <div class="Fs30 red FontThemeLight">
-                                    <h:outputText value="#{adashbean.salesInfo.get('Pending')}">
-                                        <f:convertNumber pattern="#,###,##0"/>
-                                    </h:outputText>
+                            <div class="Wid90 BorderedBox TexAlCenter HoverEffect MarAuto">
+                                <div class="ContainerIndent">
+                                    <div class="Fs15 gray FontThemeRegular">Visitors</div>
+                                    <div class="EmptyBox10"></div>
+                                    <div class="Fs30 red FontThemeLight">
+                                        <h:outputText value="#{adashbean.salesInfo.get('Pending')}">
+                                            <f:convertNumber pattern="#,###,##0"/>
+                                        </h:outputText>
+                                    </div>
                                 </div>
                             </div>
-                            </div>
-                            </div>
-                        </a>
-                        <div class="Container50">
-                           <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
+                        </div>
+                    </a>
+
+                    <div class="Container50">
+                        <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
                             <div class="ContainerIndent">
                                 <div class="Fs15 gray FontThemeRegular">Today</div>
                                 <div class="EmptyBox10"></div>
@@ -126,85 +130,90 @@
                                     </h:outputText>
                                 </div>
                             </div>
-                            </div>
-                            </div>
+                        </div>
                     </div>
-
                 </div>
+
             </div>
         </div>
-        <!-- BOX END -->
+    </div>
+    <!-- BOX END -->
 
-        <!-- BOX START -->
-        <p:outputPanel style="border: 0px; background: transparent" rendered="false">
+    <!-- BOX START -->
+    <p:outputPanel style="border: 0px; background: transparent" rendered="false">
 
         <div class="layout-portlets-box">
             <div class="Container100 Responsive100">
-            
+
                 <div class="DispInlBlock TexAlLeft MarTop20">
-                <div class="Container25"><i class="fa fa-ioxhost Fs40 orange Fleft MarRight10"></i></div>
-                    
+                    <div class="Container25"><i class="fa fa-ioxhost Fs40 orange Fleft MarRight10"></i></div>
+
                     <div class="Container75">
-                                <div class="Fright">
-                                    <h2 class="black Fs18 FontThemeMedium AdvVisitorStat">Stock Exchanges</h2>
-                                </div>
-                            </div>
+                        <div class="Fright">
+                            <h2 class="black Fs18 FontThemeMedium AdvVisitorStat">Stock Exchanges</h2>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="Seperator Container100"></div>
             <div class="Container100 Responsive100">
                 <div class="ContainerIndent PaddingTopBottomNone">
-                <div class="Container20 Responsive50 MarginBottomStats">
-                    <div class="BorderedBox TexAlCenter MarginLeftRight">
-                        <div class="ContainerIndent">
-                            <span class="gray Fs18 FontThemeRegular DispBlock">SPY</span>
-                            <div class="EmptyBox10"></div>
-                            <span class="green FontThemeLight Fs18">#{adashbean.securityInfo.get('SPY')}</span>
+                    <div class="Container20 Responsive50 MarginBottomStats">
+                        <div class="BorderedBox TexAlCenter MarginLeftRight">
+                            <div class="ContainerIndent">
+                                <span class="gray Fs18 FontThemeRegular DispBlock">SPY</span>
+
+                                <div class="EmptyBox10"></div>
+                                <span class="green FontThemeLight Fs18">#{adashbean.securityInfo.get('SPY')}</span>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="Container20 Responsive50 MarginBottomStats">
-                    <div class="BorderedBox TexAlCenter MarginLeftRight">
-                        <div class="ContainerIndent">
-                            <span class="gray Fs18 FontThemeRegular DispBlock">VEA</span>
-                            <div class="EmptyBox10"></div>
-                            <span class="red FontThemeLight Fs18">#{adashbean.securityInfo.get('VEA')}</span>
+                        <div class="BorderedBox TexAlCenter MarginLeftRight">
+                            <div class="ContainerIndent">
+                                <span class="gray Fs18 FontThemeRegular DispBlock">VEA</span>
+
+                                <div class="EmptyBox10"></div>
+                                <span class="red FontThemeLight Fs18">#{adashbean.securityInfo.get('VEA')}</span>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="Container20 Responsive50 MarginBottomStats">
-                    <div class="BorderedBox TexAlCenter MarginLeftRight">
-                        <div class="ContainerIndent">
-                            <span class="gray Fs18 FontThemeRegular DispBlock">IEF</span>
-                            <div class="EmptyBox10"></div>
-                            <span class="orange FontThemeLight Fs18">#{adashbean.securityInfo.get('IEF')} </span>
+                        <div class="BorderedBox TexAlCenter MarginLeftRight">
+                            <div class="ContainerIndent">
+                                <span class="gray Fs18 FontThemeRegular DispBlock">IEF</span>
+
+                                <div class="EmptyBox10"></div>
+                                <span class="orange FontThemeLight Fs18">#{adashbean.securityInfo.get('IEF')} </span>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="Container20 Responsive50 MarginBottomStats">
-                    <div class="BorderedBox TexAlCenter MarginLeftRight">
-                        <div class="ContainerIndent">
-                            <span class="gray Fs18 FontThemeRegular DispBlock">IAU</span>
-                            <div class="EmptyBox10"></div>
-                            <span class="green FontThemeLight Fs18">#{adashbean.securityInfo.get('IAU')} </span>
+                        <div class="BorderedBox TexAlCenter MarginLeftRight">
+                            <div class="ContainerIndent">
+                                <span class="gray Fs18 FontThemeRegular DispBlock">IAU</span>
+
+                                <div class="EmptyBox10"></div>
+                                <span class="green FontThemeLight Fs18">#{adashbean.securityInfo.get('IAU')} </span>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="Container20 Responsive50 MarginBottomStats">
-                    <div class="BorderedBox TexAlCenter MarginLeftRight">
-                        <div class="ContainerIndent">
-                            <span class="gray Fs18 FontThemeRegular DispBlock">BIL</span>
-                            <div class="EmptyBox10"></div>
-                            <span class="red FontThemeLight Fs18">#{adashbean.securityInfo.get('BIL')} </span>
+                        <div class="BorderedBox TexAlCenter MarginLeftRight">
+                            <div class="ContainerIndent">
+                                <span class="gray Fs18 FontThemeRegular DispBlock">BIL</span>
+
+                                <div class="EmptyBox10"></div>
+                                <span class="red FontThemeLight Fs18">#{adashbean.securityInfo.get('BIL')} </span>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
         </div>
-        </p:outputPanel>
-        <!-- BOX END -->
+    </p:outputPanel>
+    <!-- BOX END -->
 
-    </ui:define>
+</ui:define>
 
 </ui:composition>
