--- a/tcm/modules/web/src/main/webapp/pages/advisor/alist.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/advisor/alist.xhtml
@@ -6,7 +6,7 @@
                 template="/template/common/template.xhtml">
 
     <f:metadata>
-        <f:viewParam name="Action" value="#{manageAdvisorBean.filteredClient}"/>
+        <f:viewParam name="action" value="#{manageAdvisorBean.filteredClient}"/>
         <f:event type="preRenderView" listener="#{manageAdvisorBean.preRenderView}"/>
     </f:metadata>
 
@@ -26,21 +26,19 @@
                     </p:confirmDialog>
 
                     <h:form id="form">
-                    <h3 class="BigTopic">
-                        <div class="Wid100 Responsive100 HeaderTableBlock">
-                        <h2 class="Fs20 Fleft">List of Accounts</h2>
-                        <div class="PenelFilter Fright">
-                            <p:selectOneButton value="#{manageAdvisorBean.filteredClient}">
-                                <f:selectItem itemLabel="ALL" itemValue="" />
-                                <f:selectItem itemLabel="Pending" itemValue="P" />
-                                <f:selectItem itemLabel="Active" itemValue="A" />
-                                <p:ajax update="@form" listener="#{manageAdvisorBean.refreshPage}" />
-                            </p:selectOneButton>
-                            </div>
+                        <div class="Container100">
+                           <div class="Fright">
+                           <p:selectOneButton value="#{manageAdvisorBean.filteredClient}">
+                               <p:ajax update="@form" event="change"
+                                       listener="#{manageAdvisorBean.refreshPage}" />
+                               <f:selectItem itemLabel="ALL" itemValue="B" />
+                               <f:selectItem itemLabel="Pending" itemValue="P" />
+                               <f:selectItem itemLabel="Active" itemValue="A" />
+                           </p:selectOneButton>
+                           </div>
                         </div>
-                    </h3>
-
-                        <p:dataTable id="managedDataList" var="managedVar" styleClass="ListOfAccountsTable" widgetVar="managedTable"
+                        <div class="Container100">
+                        <p:dataTable id="managedTable" var="managedVar" styleClass="ListOfAccountsTable" widgetVar="managedTable"
                                      value="#{manageAdvisorBean.filteredDataList}" reflow="true">
 
 <!--
@@ -55,41 +53,43 @@
 -->
 
                             <p:column styleClass="ListOfAccntsColWidthBtn ZeroPaddingBottom" resizable="true">
-                                <p:commandButton id="activeButton" rendered="#{managedVar.acctStatus == 'Active'}"
+                                <p:commandButton id="editButton"
+                                                 styleClass="Fs16 BlueButton DualBtnModeLeft"
+                                                 process="@this" immediate="true"
+                                                 icon="fa fa-pencil-square-o Fs14 white"
+                                                 action="#{manageAdvisorBean.doEditAction}">
+                                    <p:tooltip for="editButton" value="Edit" />
+                                    <f:setPropertyActionListener value="#{managedVar}"
+                                                                 target="#{manageAdvisorBean.selectedAccount}"/>
+                                </p:commandButton>
+
+                                <p:commandButton id="ovButton" rendered="#{managedVar.acctStatus == 'Active'}"
                                                  styleClass="Fs16 GreenButton"
                                                  process="@this" immediate="true"
                                                  icon="fa fa-search-plus Fs14 white"
                                                  action="#{manageAdvisorBean.doManagedAction}">
-                                    <p:tooltip id="activeToolTipFade" for="activeButton" value="Show" />
+                                    <p:tooltip for="ovButton" value="Show" />
                                     <f:setPropertyActionListener value="#{managedVar}"
                                                                  target="#{manageAdvisorBean.selectedAccount}"/>
                                 </p:commandButton>
-                                <p:commandButton id="pendingButton" rendered="#{managedVar.acctStatus != 'Active'}"
-                                                 styleClass="Fs16 BlueButton DualBtnModeLeft"
-                                                 process="@this" immediate="true"
-                                                 icon="fa fa-pencil-square-o Fs14 white"
-                                                 action="#{manageAdvisorBean.doManagedAction}">
-                                    <p:tooltip id="pendingToolTipFade" for="pendingButton" value="Edit" />
-                                    <f:setPropertyActionListener value="#{managedVar}"
-                                                                 target="#{manageAdvisorBean.selectedAccount}"/>
-                                </p:commandButton>
-                                <p:commandButton id="menuDelete" rendered="#{managedVar.acctStatus != 'Active'}"
+                                <p:commandButton id="deleteButton" rendered="#{managedVar.acctStatus != 'Active'}"
                                                  styleClass="Fs16 RedButton DualBtnModeRight"
                                                  process="@this" immediate="true"
                                                  icon="fa fa-trash Fs14 white"
                                                  actionListener="#{manageAdvisorBean.doDelete(managedVar)}"
-                                                 update="managedDataList">
+                                                 update="managedTable">
+                                    <p:tooltip for="deleteButton" value="Delete" />
                                     <p:confirm header="Delete This Account" message="Are you sure?" icon="ui-icon-alert"/>
                                 </p:commandButton>
                             </p:column>
                             <!-- <p:column styleClass="ListOfAccntsColWidthBtn ZeroPaddingBottom" resizable="true">
                                 
                             </p:column> -->
-                            <p:column sortBy="#{managedVar.fullname}"
-                                      headerText="Name"
+                            <p:column sortBy="#{managedVar.portfolioName}"
+                                      headerText="Strategy"
                                       styleClass="ListOfAccntsColWidth"
                                       resizable="true">
-                                <h:outputText styleClass="dashboardUsrColumnFloatRight" value="#{managedVar.fullname}"/>
+                                <h:outputText styleClass="dashboardUsrColumnFloatLeft" value="#{managedVar.portfolioName}"/>
                             </p:column>
                             <p:column sortBy="#{managedVar.displayAcct}"
                                       headerText="Acct#"
@@ -120,6 +120,7 @@
                                 </h:outputText>
                             </p:column>
                         </p:dataTable>
+                        </div>
 
                     </h:form>
                 </div>
